--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,21 @@
-@import url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Th.woff2);
+/* @import url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Th.woff2); */
 
 * {
   margin: 0px;
   padding: 0px;
-  font-family: "Netflix Sans Medium", sans-serif;
+  font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu,
+    sans-serif;
+  src: url("./fonts/Netflix\ Sans\ Light.otf");
   box-sizing: border-box;
   font-size: 1.25rem;
 }
 body {
   background-color: rgba(0, 0, 0, 0.9);
   color: #fff;
+}
+
+.background {
+  display: block;
   background-image: url("https://assets.nflxext.com/ffe/siteui/vlv3/a56dc29b-a0ec-4f6f-85fb-50df0680f80f/2f8ae902-8efe-49bb-9a91-51b6fcc8bf46/IN-en-20240617-popsignuptwoweeks-perspective_alpha_website_small.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -19,10 +25,11 @@ body {
   /* display: grid; */
   align-items: center;
   justify-content: center;
-  padding: 1.25rem;
+  padding: 0px 1.5rem 0px 1.5rem;
   margin: auto;
   height: 100vh;
   background: rgba(0, 0, 0, 0.8);
+  margin: 0px;
 }
 
 .header {
@@ -36,52 +43,101 @@ body {
   cursor: pointer;
 }
 
-.lang {
-  height: 1.8rem;
-  width: 6rem;
+.header-right {
   display: flex;
-  outline: 0.3px solid rgb(255, 255, 255, 0.3);
-  justify-content: space-around;
+  width: 25%;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+
+.lang {
+  background-color: none;
+  display: flex;
   align-items: center;
-  padding: 5px;
-  position: relative;
-}
-
-.header select {
-  position: absolute;
-  height: 1.8rem;
+  justify-content: space-between;
   width: 6rem;
-  font-size: 15px;
-  background-color: transparent;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  font-weight: 700px;
-  margin-left: 2px;
-}
-.header select option {
-  font-size: 15px;
-  background-color: black;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  padding: 2rem;
-  outline: 0.3px solid rgb(255, 255, 255, 0.3);
-}
-
-.header button {
-  background-color: rgb(246, 8, 8);
-  color: #fff;
-  border: none;
-  outline: 0.3px solid rgb(255, 255, 255, 0.3);
   height: 1.8rem;
-  width: 4rem;
-  font-size: 13px;
+  outline: 0.1px solid #fff;
+  padding-left: 10px;
+  font-size: 50px;
   border-radius: 5px;
-  font-weight: bold;
-  cursor: pointer;
+  /* position: absolute; */
 }
 
-.header button:hover {
-  background-color: rgba(239, 65, 65, 0.9);
+.lang-select {
+  background-color: transparent;
+  color: #ffff;
+  border: none;
+  padding-left: 10px;
+  font-size: 1rem;
+  width: 10rem;
+  padding-left: 10px;
+}
+
+.lang-option {
+  background-color: black;
+  border: none;
+  display: block;
+  font-size: 1rem;
+}
+
+.main-a {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  height: 100%;
+  line-height: 3rem;
+  margin-top: 7rem;
+  margin-bottom: 7rem;
+}
+
+.line-1 {
+  font-size: 2.5rem;
+  align-items: center;
+  font-weight: 900;
+}
+
+.search-container {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-input-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-input-button input {
+  margin-right: 0.5rem;
+  height: 2.5rem;
+  width: 50%;
+  font-size: 1rem;
+  padding: 20px;
+  background-color: transparent;
+  border: none;
+  color: #fff;
+  outline: 0.25px solid rgb(255, 255, 255, 0.5);
+}
+
+.search-input-button input:focus {
+  outline: 2px solid #fff;
+}
+
+.main-b {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  height: 300px;
+  line-height: 3rem;
+  margin-top: 0px;
+}
+
+.main {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  height: auto;
+  margin-top: 1rem;
 }
