--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   font-size: 1.25rem;
 }
 body {
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: black;
   color: #fff;
 }
 
@@ -18,6 +18,7 @@ body {
   display: block;
   background-image: url("https://assets.nflxext.com/ffe/siteui/vlv3/a56dc29b-a0ec-4f6f-85fb-50df0680f80f/2f8ae902-8efe-49bb-9a91-51b6fcc8bf46/IN-en-20240617-popsignuptwoweeks-perspective_alpha_website_small.jpg");
   background-size: cover;
+  background-color: #3333;
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -87,8 +88,8 @@ body {
   flex-direction: column;
   height: 100%;
   line-height: 3rem;
-  margin-top: 7rem;
-  margin-bottom: 7rem;
+  margin-top: 6rem;
+  margin-bottom: 6rem;
 }
 
 .line-1 {
@@ -125,13 +126,9 @@ body {
   outline: 2px solid #fff;
 }
 
-.main-b {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  height: 300px;
-  line-height: 3rem;
-  margin-top: 0px;
+.search-container p {
+  font-size: 1rem;
+  font-weight: 500;
 }
 
 .main {
@@ -140,4 +137,47 @@ body {
   flex-direction: column;
   height: auto;
   margin-top: 1rem;
+}
+
+.main-b,
+.main-c {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 400px;
+  width: 100%;
+  margin-top: 2.3rem;
+  background-color: black;
+  border-top: 10px solid hwb(0 40% 60% / 0.2);
+}
+
+.text-block {
+  width: 45%;
+}
+
+.text-block p:nth-child(1) {
+  font-size: 2.5rem;
+  align-items: center;
+  font-weight: 900;
+  margin-bottom: 2.5rem;
+}
+
+.text-block p:nth-child(2) {
+  align-items: center;
+  line-height: 2rem;
+}
+
+.video-block {
+  width: 500px;
+  height: 100%;
+}
+
+.video-block img {
+  width: 500px;
+  height: 400px;
+  position: absolute;
+}
+
+.main-c img {
+  height: 350px;
 }
