--- a/src/App.css
+++ b/src/App.css
@@ -14,41 +14,77 @@ body {
   color: #fff;
 }
 
-.background {
-  display: block;
-  background-image: url("https://assets.nflxext.com/ffe/siteui/vlv3/a56dc29b-a0ec-4f6f-85fb-50df0680f80f/2f8ae902-8efe-49bb-9a91-51b6fcc8bf46/IN-en-20240617-popsignuptwoweeks-perspective_alpha_website_small.jpg");
-  background-size: cover;
-  background-color: #3333;
-  background-repeat: no-repeat;
-  background-position: center;
-}
 .container {
   /* display: grid; */
   align-items: center;
   justify-content: center;
-  padding: 0px 1.5rem 0px 1.5rem;
   margin: auto;
   height: 100vh;
   background: rgba(0, 0, 0, 0.7);
   margin: 0px;
 }
 
-.header {
+.main {
+  display: flex;
+  flex-direction: column;
+  margin: 0px;
+}
+
+.main-a-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 700px;
+  position: relative;
+}
+
+.main-a {
   display: flex;
   align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 700px;
+  line-height: 3rem;
+  margin-bottom: 6rem;
+  margin-top: 9rem;
+}
+
+.background {
+  position: absolute;
+  width: 100%;
+  height: 740px;
+}
+
+.background img {
+  opacity: 0.3;
+  position: absolute;
+  width: 100%;
+  height: 745px;
+  object-fit: fill;
+  object-position: top;
+}
+
+.header {
+  display: flex;
+  width: 100%;
+  align-items: center;
   justify-content: space-between;
-  padding: 0 3rem 0 3rem;
+  padding: 0px 3rem;
+  position: relative;
 }
 
 .logo {
   cursor: pointer;
+  display: inline-block;
+  padding: 0px 3rem;
 }
 
 .header-right {
   display: flex;
-  width: 25%;
-  align-items: flex-end;
+  width: 370px;
+  align-items: center;
   justify-content: space-between;
+  padding: 0px 4rem 0px 3rem;
 }
 
 .lang {
@@ -57,12 +93,11 @@ body {
   align-items: center;
   justify-content: space-between;
   width: 6rem;
-  height: 1.8rem;
+  height: 1.6rem;
   outline: 0.1px solid #fff;
   padding-left: 10px;
-  font-size: 50px;
+  font-size: 40px;
   border-radius: 5px;
-  /* position: absolute; */
 }
 
 .lang-select {
@@ -70,7 +105,7 @@ body {
   color: #ffff;
   border: none;
   padding-left: 10px;
-  font-size: 1rem;
+  font-size: 15px;
   width: 10rem;
   padding-left: 10px;
 }
@@ -79,21 +114,11 @@ body {
   background-color: black;
   border: none;
   display: block;
-  font-size: 1rem;
-}
-
-.main-a {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  height: 100%;
-  line-height: 3rem;
-  margin-top: 6rem;
-  margin-bottom: 6rem;
+  font-size: 15px;
 }
 
 .line-1 {
-  font-size: 2.5rem;
+  font-size: 2.3rem;
   align-items: center;
   font-weight: 900;
 }
@@ -108,12 +133,12 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-weight: bold;
 }
 
 .search-input-button input {
   margin-right: 0.5rem;
-  /* height: 2.8rem;*/
-  width: 55%;
+  width: 58%;
   font-size: 1rem;
   padding: 0.7rem 4rem 0.7rem 0.5rem;
   background-color: transparent;
@@ -129,16 +154,8 @@ body {
 }
 
 .search-container p {
-  font-size: 1rem;
+  font-size: 1.1rem;
   font-weight: 500;
-}
-
-.main {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  height: auto;
-  margin-top: 1rem;
 }
 
 .main-b,
