--- a/src/App.css
+++ b/src/App.css
@@ -36,17 +36,19 @@ body {
   width: 100%;
   height: 700px;
   position: relative;
+  justify-content: center;
+  align-items: center;
 }
 
 .main-a {
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 100%;
   height: 700px;
+  max-width: 100%;
   line-height: 3rem;
-  margin-bottom: 6rem;
-  margin-top: 9rem;
+  padding-bottom: 6rem;
+  padding-top: 9rem;
 }
 
 .background {
@@ -67,16 +69,19 @@ body {
 .header {
   display: flex;
   width: 100%;
+  height: 50px;
   align-items: center;
   justify-content: space-between;
-  padding: 0px 3rem;
+  padding: 2.5rem 2rem;
   position: relative;
+  margin: auto;
 }
 
 .logo {
   cursor: pointer;
   display: inline-block;
   padding: 0px 3rem;
+  width: auto;
 }
 
 .header-right {
@@ -118,27 +123,34 @@ body {
 }
 
 .line-1 {
-  font-size: 2.3rem;
-  align-items: center;
+  font-size: 2.4rem;
+  max-width: 100%;
+  text-align: center;
   font-weight: 900;
+}
+
+.line-2,
+.line-3 {
+  max-width: 100%;
+  text-align: center;
 }
 
 .search-container {
   display: grid;
+  max-width: 100%;
   justify-content: center;
   align-items: center;
 }
 
 .search-input-button {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: bold;
+  padding: 10px;
 }
 
 .search-input-button input {
   margin-right: 0.5rem;
   width: 58%;
+  height: 3rem;
   font-size: 1rem;
   padding: 0.7rem 4rem 0.7rem 0.5rem;
   background-color: transparent;
@@ -151,11 +163,6 @@ body {
 
 .search-input-button input:focus {
   outline: 2px solid rgb(255, 255, 255);
-}
-
-.search-container p {
-  font-size: 1.1rem;
-  font-weight: 500;
 }
 
 .main-b,
@@ -209,11 +216,4 @@ body {
 
 .main-c img {
   height: 350px;
-}
-
-.search-input-button button p:last-child {
-  margin-left: 20px;
-  font-weight: bold;
-  vertical-align: baseline;
-  padding: 3px 0 0 0;
 }
