--- a/src/App.css
+++ b/src/App.css
@@ -72,9 +72,11 @@ body {
   height: 50px;
   align-items: center;
   justify-content: space-between;
-  padding: 2.5rem 2rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-bottom: 0px;
   position: relative;
-  margin: auto;
+  margin-top: 2.5rem;
 }
 
 .logo {
@@ -144,7 +146,11 @@ body {
 
 .search-input-button {
   display: flex;
+  width: 100%;
   padding: 10px;
+  align-items: center;
+  justify-content: center;
+  vertical-align: top;
 }
 
 .search-input-button input {
@@ -165,6 +171,15 @@ body {
   outline: 2px solid rgb(255, 255, 255);
 }
 
+.getstarted {
+  display: inline-block;
+  text-align: center;
+}
+
+.gt {
+  display: inline-block;
+  padding-left: 15px;
+}
 .main-b,
 .main-c {
   display: flex;
