--- a/src/App.css
+++ b/src/App.css
@@ -1,234 +1,100 @@
-/* @import url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Th.woff2); */
+@import url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Th.woff2);
 
 * {
   margin: 0px;
   padding: 0px;
   font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu,
     sans-serif;
-  src: url("./fonts/Netflix\ Sans\ Light.otf");
   box-sizing: border-box;
   font-size: 1.25rem;
 }
 body {
   background-color: black;
-  color: #fff;
-}
-
-.container {
-  /* display: grid; */
-  align-items: center;
-  justify-content: center;
-  margin: auto;
-  height: 100vh;
-  background: rgba(0, 0, 0, 0.7);
   margin: 0px;
+  color: #fff;
 }
 
 .main {
   display: flex;
   flex-direction: column;
-  margin: 0px;
-}
-
-.main-a-container {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 700px;
-  position: relative;
-  justify-content: center;
-  align-items: center;
-}
-
-.main-a {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  height: 700px;
-  max-width: 100%;
-  line-height: 3rem;
-  padding-bottom: 6rem;
-  padding-top: 9rem;
+  background-color: dodgerblue;
+  flex-shrink: 0;
 }
 
 .background {
-  position: absolute;
   width: 100%;
-  height: 740px;
+  height: 100%;
+  position: absolute;
+  object-position: center;
 }
 
-.background img {
-  opacity: 0.3;
-  position: absolute;
-  width: 100%;
-  height: 745px;
-  object-fit: fill;
-  object-position: top;
+.main-a {
+  position: relative;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .header {
   display: flex;
-  width: 100%;
-  height: 50px;
   align-items: center;
   justify-content: space-between;
-  padding-left: 2rem;
-  padding-right: 2rem;
-  padding-bottom: 0px;
-  position: relative;
-  margin-top: 2.5rem;
+  margin: 1px 100px;
+  padding: 0px 30px;
 }
 
 .logo {
-  cursor: pointer;
-  display: inline-block;
-  padding: 0px 3rem;
-  width: auto;
+  height: 120px;
 }
 
 .header-right {
   display: flex;
-  width: 370px;
+  flex: 1;
   align-items: center;
   justify-content: space-between;
-  padding: 0px 4rem 0px 3rem;
+  justify-content: end;
 }
 
 .lang {
-  background-color: none;
   display: flex;
+  width: 130px;
   align-items: center;
   justify-content: space-between;
-  width: 6rem;
-  height: 1.6rem;
-  outline: 0.1px solid #fff;
-  padding-left: 10px;
-  font-size: 40px;
-  border-radius: 5px;
+  border: 0.5px solid rgb(255, 255, 255, 0.3);
+  margin-right: 30px;
+  max-width: 200px;
 }
 
+.lang p {
+  flex: 1;
+  width: 0;
+  display: flex;
+  margin-right: 5px;
+  margin-left: 5px;
+  /* width: 20px; */
+}
+.lang div {
+  /* flex: 1;
+  width: 0; */
+}
 .lang-select {
+  width: 80px;
+  font-size: 16px;
+  font-family: sans-serif;
+  font-weight: 700px;
+  height: 1.6rem;
+  border: none;
   background-color: transparent;
-  color: #ffff;
-  border: none;
-  padding-left: 10px;
-  font-size: 15px;
-  width: 10rem;
-  padding-left: 10px;
-}
-
-.lang-option {
-  background-color: black;
-  border: none;
-  display: block;
-  font-size: 15px;
-}
-
-.line-1 {
-  font-size: 2.4rem;
-  max-width: 100%;
-  text-align: center;
-  font-weight: 900;
-}
-
-.line-2,
-.line-3 {
-  max-width: 100%;
-  text-align: center;
-}
-
-.search-container {
-  display: grid;
-  max-width: 100%;
-  justify-content: center;
-  align-items: center;
-}
-
-.search-input-button {
-  display: flex;
-  width: 100%;
-  padding: 10px;
-  align-items: center;
-  justify-content: center;
-  vertical-align: top;
-}
-
-.search-input-button input {
-  margin-right: 0.5rem;
-  width: 58%;
-  height: 3rem;
-  font-size: 1rem;
-  padding: 0.7rem 4rem 0.7rem 0.5rem;
-  background-color: transparent;
-  border: none;
   color: #fff;
-  outline: 0.25px solid rgb(255, 255, 255, 0.5);
-  box-shadow: 0 0 3px rgb(255, 255, 255, 0.3);
-  border-radius: 3px;
 }
 
-.search-input-button input:focus {
-  outline: 2px solid rgb(255, 255, 255);
-}
-
-.getstarted {
-  display: inline-block;
-  text-align: center;
-}
-
-.gt {
-  display: inline-block;
-  padding-left: 15px;
-}
-.main-b,
-.main-c {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 400px;
-  width: 100%;
-  margin-top: 2.3rem;
+.lang option {
+  color: #fff;
+  font-size: 16px;
+  font-weight: 700px;
   background-color: black;
-  border-top: 10px solid hwb(0 40% 60% / 0.2);
+  border: none;
 }
 
-.text-block {
-  width: 45%;
-}
-
-.text-block p:nth-child(1) {
-  font-size: 2.5rem;
-  align-items: center;
-  font-weight: 900;
-  margin-bottom: 2.5rem;
-}
-
-.text-block p:nth-child(2) {
-  align-items: center;
-  line-height: 2rem;
-}
-
-.video-block {
-  width: 470px;
-  height: 100%;
-}
-
-.video-block img {
-  width: 500px;
-  height: 348px;
-  position: absolute;
-}
-
-.video-block div {
-  height: 100%;
-  width: 48%;
-}
-.video-block video {
-  width: 430px;
-  height: 320px;
-  padding-left: 65px;
-}
-
-.main-c img {
-  height: 350px;
+.btn-div {
+  width: 90px;
 }
